# account-financial-reporting

./: README.md
account_financial_report/: README.rst  __manifest__.py
account_financial_report/i18n/: account_financial_report.pot  ar.po  fr_CH.po
account_financial_report/report/: general_ledger.py
account_financial_report/static/description/: index.html
account_financial_report/wizard/: general_ledger_wizard.py
account_financial_report_sale/: README.rst
account_financial_report_sale/static/description/: index.html
mis_template_financial_report/data/: mis_report_kpi.xml
partner_statement/: README.rst
partner_statement/i18n/: it.po  partner_statement.pot
partner_statement/report/: activity_statement.py  outstanding_statement.py  outstanting_statement_xlsx.py  report_statement_common.py
partner_statement/static/description/: index.html
partner_statement/tests/: test_outstanding_statement.py
partner_statement/wizard/: statement_common.py  statement_wizard.xml
setup/_metapackage/: pyproject.toml
