[project]
name = "odoo-addons-oca-account-financial-reporting"
version = "18.0.20250724.0"
dependencies = [
    "odoo-addon-account_financial_report==18.0.*",
    "odoo-addon-account_tax_balance==18.0.*",
    "odoo-addon-partner_statement==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
